# uzmorph

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  combine_datasets.py  convert_to_latin.py  count_csv.py  create_root_csv.py  fix_prn_tags.py  fix_verb_stems.py  generate_pos_dataset.py  pyproject.toml  setup.py  test_accuracy.py  testing.py  uzbek_pos_dataset.csv  uzmorph.py
hf_space/: README.md  app.py  requirements.txt
trash/: cse.csv  exception_stems.csv  lemma_map.csv  number_stems.csv  root.csv  small_stems.csv
uzmorph/: __init__.py
uzmorph/data/: cse.csv  non_affixed_stems.csv  root.csv
