[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uzmorph"
version = "0.1.0"
authors = [
  { name="Ulugbek Salaev", email="ulugbeksalaev@gmail.com" },
]
description = "Uzbek Morphological Analyzer (Rule-Based + Lexicon)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["uzmorph*"]

[tool.setuptools.package-data]
uzmorph = ["data/*.csv"]
